--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
-# Default ignored files
-/shelf/
-/workspace.xml
+/src/main/resources/Config.txt
 
 # Compiled class file
 *.class
@@ -22,7 +20,6 @@
 *.zip
 *.tar.gz
 *.rar
-*.txt
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
